2008-05-29  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemethodbinding.vala:
	* gobject/valaclassregisterfunction.vala:

	Simplify generated _new functions for non-GObject classes

2008-05-29  Jaap A. Haitsma  <jaap@haitsma.org>

	* tests/strings.vala:
	Add some more tests. Fixes bug #535430

2008-05-29  Jaap A. Haitsma  <jaap@haitsma.org>

	* vapi/gstreamer-0.10.vapi:
	* vapi/packages/gstreamer-0.10/gstreamer-0.10-custom.vala:
	Fix Gst.init () binding. Fixes bug #535411

2008-05-29  Jaap A. Haitsma  <jaap@haitsma.org>

	* tests/testrunner.sh:
	Print errors on stdout. Fixes #535417

2008-05-29  Jürg Billeter  <j@bitron.ch>

	* tests/arrays.vala:

	Test compilation of constant string arrays

2008-05-29  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:

	Constant arrays don't own their elements, fixes bug 535415

2008-05-29  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenietokentype.vala:
	* vala/valageniescanner.vala:
	* vala/valagenieparser.vala:
	
	Revamped array syntax


2008-05-29  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:
	* vapigen/valagidlparser.vala:

	Mark signals as virtual to make it possible to override default
	method handlers

	* vapi/atk.vapi:
	* vapi/gconf-2.0.vapi:
	* vapi/gdk-2.0.vapi:
	* vapi/gdk-pixbuf-2.0.vapi:
	* vapi/gio-2.0.vapi:
	* vapi/gio-unix-2.0.vapi:
	* vapi/gnome-desktop-2.0.vapi:
	* vapi/gnome-vfs-2.0.vapi:
	* vapi/goocanvas.vapi:
	* vapi/gstreamer-0.10.vapi:
	* vapi/gstreamer-base-0.10.vapi:
	* vapi/gstreamer-interfaces-0.10.vapi:
	* vapi/gstreamer-rtsp-0.10.vapi:
	* vapi/gtk+-2.0.vapi:
	* vapi/gtksourceview-2.0.vapi:
	* vapi/hildon-1.vapi:
	* vapi/hildon-fm-2.vapi:
	* vapi/json-glib-1.0.vapi:
	* vapi/libgnomeui-2.0.vapi:
	* vapi/libnotify.vapi:
	* vapi/liboobs-1.vapi:
	* vapi/libsexy.vapi:
	* vapi/libsoup-2.2.vapi:
	* vapi/libsoup-2.4.vapi:
	* vapi/libwnck-1.0.vapi:
	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata: